--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return second_neighbor[s]\n",
+    "    return second_neighbor['street'] - first_ne\n",
     "    pass"
    ]
   },
