--- a/index.ipynb
+++ b/index.ipynb
@@ -204,15 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return second_neighbor['street'] - first_ne\n",
-    "    pass"
+    "    return second_neighbor['street'] - first_neighbor['street']"
    ]
   },
   {
@@ -224,11 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "street_distance(fred, natalie) # 4"
    ]
