--- a/index.ipynb
+++ b/index.ipynb
@@ -204,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return first_neighbor['street'] - second_neighbor['street'] - "
+    "    return first_neighbor['street'] - second_neighbor['street']"
    ]
   },
   {
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-4"
+       "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    pareturn first_neighbor['street'] - second_neighbor['street']ss"
    ]
   },
   {
